RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -126,9 +126,14 @@
 		* 상위 브렌치 노드까지 처리의 범위가 넒어짐
 	* 결론 : *B-Tree 는 상대적으로 쓰기 작업에 비용이 많이 듦*
 * 인덱스 추가로 인한 INSERT/UPDATE 문장이 받을 영향
-	* 계산 방법 : 
+	* 계산 방법
+		* 테이블에 레코드를 추가하는 작업 비용 : 1
+		* 해당 테이블에 인덱스에 키를 추가하는 작업 비용 : 1~1.5
+		* ex) 테이블에 인덱스가 3개(테이블의 모든 인덱스가 B-Tree 라고 가정)있다면 
+			* 테이블에 인덱스가 하나도 없는 경우 작업 비용 : 1
+			* 인덱스가 3개인 경우 작업 비용 : 5.5 (1.5 * 3 + 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNDIxNzE0NTIsLTE1NjM1MDcxNywtMT
-k3NDAyOTQzNywxODgzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5
-NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
+eyJoaXN0b3J5IjpbMTg1OTM2ODE3MiwtMTU2MzUwNzE3LC0xOT
+c0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1
+NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
