RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -131,9 +131,10 @@
 		* 해당 테이블에 인덱스에 키를 추가하는 작업 비용 : 1~1.5
 		* ex) 테이블에 인덱스가 3개(테이블의 모든 인덱스가 B-Tree 라고 가정)있다면 
 			* 테이블에 인덱스가 하나도 없는 경우 작업 비용 : 1
-			* 인덱스가 3개인 경우 작업 비용 : 5.5 (1.5 * 3 + 
+			* 인덱스가 3개인 경우 작업 비용 : 5.5 (1.5 * 3 + 1)
+	* 중요한 점 : 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg1OTM2ODE3MiwtMTU2MzUwNzE3LC0xOT
+eyJoaXN0b3J5IjpbLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOT
 c0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1
 NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
