--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -132,9 +132,10 @@
 		* ex) 테이블에 인덱스가 3개(테이블의 모든 인덱스가 B-Tree 라고 가정)있다면 
 			* 테이블에 인덱스가 하나도 없는 경우 작업 비용 : 1
 			* 인덱스가 3개인 경우 작업 비용 : 5.5 (1.5 * 3 + 1)
-	* 중요한 점 : 
+	* 중요한 점 : **디스크로부터 인덱스 페이지를 읽고 써야 하기 때문에 시간이 오래 걸리는 것**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOT
-c0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1
-NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbLTE0NDkwODU2MDAsLTQyNzY2MjQwOSwtMT
+U2MzUwNzE3LC0xOTc0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2
+Njk5NywxMjU1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMT
+NdfQ==
 -->
