--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -133,10 +133,11 @@
 			* 테이블에 인덱스가 하나도 없는 경우 작업 비용 : 1
 			* 인덱스가 3개인 경우 작업 비용 : 5.5 (1.5 * 3 + 1)
 	* 중요한 점 : **디스크로부터 인덱스 페이지를 읽고 써야 하기 때문에 시간이 오래 걸리는 것**
-	* 
+* MyISAM 이나 메모리 스토리지 엔진은 INSERT 문장이 주어지면 바로 B-Tree에 인덱스 반영
+	* B-Tree 에 키를 추가하는 작업이 완료될 때까지 클라이언트는 쿼리의 결과를 받지 못하고 기다려야 함
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODE1NjgwMzg0LC00Mjc2NjI0MDksLTE1Nj
-M1MDcxNywtMTk3NDAyOTQzNywxODgzMDE4MDgyLDExODcxNjY5
-OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2MTEzXX
-0=
+eyJoaXN0b3J5IjpbMTkwMjUwMDA1MCw4MTU2ODAzODQsLTQyNz
+Y2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3LDE4ODMwMTgw
+ODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOTQ2MTkyNjUsLT
+EwNTk1NjYxMTNdfQ==
 -->
