--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -117,7 +117,7 @@
 ### 5.3.2 B-Tree 인덱스 키 추가 및 삭제
 * 레코드 저장/변경하는 경우 인덱스 키 추가나 삭제 작업이 발생
 #### 인덱스 키 추가
-* 바로 인덱스에 저장될 수도 있고 그렇지 않을 수도 있음
+* 바로 인덱스에 저장될 수도 있고 그렇지 않을 수도 있음 (InnoDB)
 * 저장될 위치 탐색
 	* B-Tree 에 저장될 때는 저장될 키값을 이용해 B-Tree 상의 적절한 위치 탐색
 	* 저장될 위치가 결정되면 레코드의 키값과 대상 레코드의 주소 정보를 B-Tree 의 리프 노드에 저장해야 함
@@ -133,11 +133,12 @@
 			* 테이블에 인덱스가 하나도 없는 경우 작업 비용 : 1
 			* 인덱스가 3개인 경우 작업 비용 : 5.5 (1.5 * 3 + 1)
 	* 중요한 점 : **디스크로부터 인덱스 페이지를 읽고 써야 하기 때문에 시간이 오래 걸리는 것**
-* MyISAM 이나 메모리 스토리지 엔진은 INSERT 문장이 주어지면 바로 B-Tree에 인덱스 반영
-	* B-Tree 에 키를 추가하는 작업이 완료될 때까지 클라이언트는 쿼리의 결과를 받지 못하고 기다려야 함
+	* MyISAM 이나 메모리 스토리지 엔진은 INSERT 문장이 주어지면 바로 B-Tree에 인덱스 반영
+		* B-Tree 에 키를 추가하는 작업이 완료될 때까지 클라이언트는 쿼리의 결과를 받지 못하고 기다려야 함
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkwMjUwMDA1MCw4MTU2ODAzODQsLTQyNz
-Y2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3LDE4ODMwMTgw
-ODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOTQ2MTkyNjUsLT
-EwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbMTg0ODUyMzgxLDgxNTY4MDM4NCwtNDI3Nj
+YyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4MzAxODA4
+MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMT
+A1OTU2NjExM119
 -->
