RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -135,10 +135,11 @@
 	* 중요한 점 : **디스크로부터 인덱스 페이지를 읽고 써야 하기 때문에 시간이 오래 걸리는 것**
 	* MyISAM 이나 메모리 스토리지 엔진은 INSERT 문장이 주어지면 바로 B-Tree에 인덱스 반영
 		* B-Tree 에 키를 추가하는 작업이 완료될 때까지 클라이언트는 쿼리의 결과를 받지 못하고 기다려야 함
-* 
+* ![INSERT 버퍼의 처리](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-04-19-01-21-05.jpeg)
+	* 1. 사용자
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0ODUyMzgxLDgxNTY4MDM4NCwtNDI3Nj
-YyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4MzAxODA4
-MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMT
-A1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTgzMTI2NDU2OCwxODQ4NTIzODEsODE1Nj
+gwMzg0LC00Mjc2NjI0MDksLTE1NjM1MDcxNywtMTk3NDAyOTQz
+NywxODgzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5NTU3MSwxMj
+k0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
 -->
