RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -136,10 +136,13 @@
 	* MyISAM 이나 메모리 스토리지 엔진은 INSERT 문장이 주어지면 바로 B-Tree에 인덱스 반영
 		* B-Tree 에 키를 추가하는 작업이 완료될 때까지 클라이언트는 쿼리의 결과를 받지 못하고 기다려야 함
 * ![INSERT 버퍼의 처리](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-04-19-01-21-05.jpeg)
-	* 1. 사용자
+	* 1. 사용자의 쿼리 실행
+	* 2. InnoDB 의 버퍼 풀에 새로운 키값을 추가해야 할 페이지 (B-Tree의 리프 노드)가 존재한다면 즉시 키 추가
+	* 3. 버퍼 풀에 B-Tree 의 리프 노드가 없으면 인서트 버퍼에 추가할 키 값과 레코드의 주소를 임시로 기록해 두고 작업 완료 (사용자 쿼리 실행 완료)
+	* 4. 백그라운드 작업으로 인덱스 페이지를 읽을 때마다 인서트 버퍼에 머지해야 할 인덱스 키값
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgzMTI2NDU2OCwxODQ4NTIzODEsODE1Nj
-gwMzg0LC00Mjc2NjI0MDksLTE1NjM1MDcxNywtMTk3NDAyOTQz
-NywxODgzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5NTU3MSwxMj
-k0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
+eyJoaXN0b3J5IjpbMzk2MjAwNTgwLDE4NDg1MjM4MSw4MTU2OD
+AzODQsLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3
+LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
+Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
