--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -139,10 +139,11 @@
 	* 1. 사용자의 쿼리 실행
 	* 2. InnoDB 의 버퍼 풀에 새로운 키값을 추가해야 할 페이지 (B-Tree의 리프 노드)가 존재한다면 즉시 키 추가
 	* 3. 버퍼 풀에 B-Tree 의 리프 노드가 없으면 인서트 버퍼에 추가할 키 값과 레코드의 주소를 임시로 기록해 두고 작업 완료 (사용자 쿼리 실행 완료)
-	* 4. 백그라운드 작업으로 인덱스 페이지를 읽을 때마다 인서트 버퍼에 머지해야 할 인덱스 키값
+	* 4. 백그라운드 작업으로 인덱스 페이지를 읽을 때마다 인서트 버퍼에 머지해야 할 인덱스 키값이 있는지 확인 후, 있으면 병합 (B-Tree 에 인덱스 키와 주소 값을 저장)
+	* 5. DB 서버 자원에 여우가 생기면 MySQL 서버의 인서트 버퍼 머지 스레드가 조금씩 인서트 버퍼에 임시 저장된 인덱스 키와 주소 값을 머지 (B-Tree에 인덱스 키와 주소 저장)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzk2MjAwNTgwLDE4NDg1MjM4MSw4MTU2OD
-AzODQsLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3
-LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
-Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbLTE2NjIxNTUzNCwxODQ4NTIzODEsODE1Nj
+gwMzg0LC00Mjc2NjI0MDksLTE1NjM1MDcxNywtMTk3NDAyOTQz
+NywxODgzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5NTU3MSwxMj
+k0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
 -->
