--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -140,10 +140,16 @@
 	* 2. InnoDB 의 ***버퍼 풀*에 새로운 키값을 추가해야 할 페이지 (B-Tree의 리프 노드)가 존재한다면 즉시 키 추가**
 	* 3. 버퍼 풀에 B-Tree 의 리프 노드가 없으면 **인서트 버퍼**에 추가할 키 값과 레코드의 주소를 임시로 기록해 두고 작업 완료 (사용자 쿼리 실행 완료)
 	* 4. *백그라운드 작업*으로 인덱스 페이지를 읽을 때마다 *인서트 버퍼에 머지해야 할 인덱스 키값이 있는지 확인 후, 있으면 병합* (B-Tree 에 인덱스 키와 주소 값을 저장)
-	* 5. DB 서버 자원에 *여유가 생기면* MySQL 서버의 *인서트 버퍼 머지 스레드*가 조금씩 인서트 버퍼에 임시 저장된 인덱스 키와 주소 값을 머지 (B-Tree에 인덱스 키와 주소 저장)
+	* 5. DB 서버 자원에 *여유가 생기면* MySQL 서버의 *인서트 버퍼 머지 스레드*가 조금씩 **인서트 버퍼에 임시 저장된 인덱스 키와 주소 값을 머지** (B-Tree에 인덱스 키와 주소 저장)
+* insert 버퍼
+	* MySQL 5.1 이하
+		* INSERT 로 인한 인덱스 키 추가 작업만 버퍼링 및 지연 처리 가능
+		* 인서트 버퍼링 (Insert 
+	* MySQL 5.5 이상 : INSERT/DELETE 등에 의한 것도 처리 가능
+		* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODcxODA2NTAsMTg0ODUyMzgxLDgxNT
-Y4MDM4NCwtNDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0
-MzcsMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMT
-I5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbODU4MTExMTQzLDE4NDg1MjM4MSw4MTU2OD
+AzODQsLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3
+LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
+Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
