RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -144,12 +144,16 @@
 * insert 버퍼
 	* MySQL 5.1 이하
 		* INSERT 로 인한 인덱스 키 추가 작업만 버퍼링 및 지연 처리 가능
-		* 인서트 버퍼링 (Insert 
-	* MySQL 5.5 이상 : INSERT/DELETE 등에 의한 것도 처리 가능
-		* 
+		* 인서트 버퍼링 (Insert Buffering)
+			* 자동으로 적용되는 기능
+	* MySQL 5.5 이상
+		* INSERT/DELETE 등에 의한 것도 처리 가능
+		* 체인지 버퍼링 (Change Buffering)
+		* innodb_change_buffering (관련 설정 파라미터)
+			* 해당 값을 잉
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODU4MTExMTQzLDE4NDg1MjM4MSw4MTU2OD
-AzODQsLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3
-LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
-Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbLTIyOTM2ODU2MiwxODQ4NTIzODEsODE1Nj
+gwMzg0LC00Mjc2NjI0MDksLTE1NjM1MDcxNywtMTk3NDAyOTQz
+NywxODgzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5NTU3MSwxMj
+k0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
 -->
