--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -150,10 +150,14 @@
 		* INSERT/DELETE 등에 의한 것도 처리 가능
 		* 체인지 버퍼링 (Change Buffering)
 		* innodb_change_buffering (관련 설정 파라미터)
-			* 해당 값을 잉
+			* 해당 값을 이용해서 키 추가 작업과 키 삭제 작업 중 어느 것을 지연 처리할지 설정해야 함
+#### 인덱스 키 삭제
+* 해당 키 값이 저장된 B-Tree 의 리프 노드를 찾아서 그냥 **삭제 마크만 하면 작업이 완료**됨
+	* 삭제된 공간은 방치 or 재활용됨
+	* 마킹 작업도 디스크 쓰기가 필요 -> 디스트 I/O 가 필요한 작업
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIyOTM2ODU2MiwxODQ4NTIzODEsODE1Nj
-gwMzg0LC00Mjc2NjI0MDksLTE1NjM1MDcxNywtMTk3NDAyOTQz
-NywxODgzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5NTU3MSwxMj
-k0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
+eyJoaXN0b3J5IjpbNjIxMDA5NjczLDE4NDg1MjM4MSw4MTU2OD
+AzODQsLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3
+LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
+Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
