RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -155,8 +155,14 @@
 * 해당 키 값이 저장된 B-Tree 의 리프 노드를 찾아서 그냥 **삭제 마크만 하면 작업이 완료**됨
 	* 삭제된 공간은 방치 or 재활용됨
 	* 마킹 작업도 디스크 쓰기가 필요 -> 디스트 I/O 가 필요한 작업
+* MySQL 5.5 이상의 버전에서는 이 작업 또한 버퍼링되어 지연 처리가 될 수 있음
+	* 처리가 지연되어도 사용자에게는 특별한 악영향 없음
+	* MySQL 서버가 내부 처리함
+* MyISAM 이나 Memory 스토리지 엔진의 테이블에서는 인덱스 키 삭제가 완료된 후 쿼리 실행이 완료됨
+#### 인덱스 키 변경
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjIxMDA5NjczLDE4NDg1MjM4MSw4MTU2OD
+eyJoaXN0b3J5IjpbMTcwNzAyMzMwLDE4NDg1MjM4MSw4MTU2OD
 AzODQsLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3
 LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
 Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
