RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -162,10 +162,14 @@
 #### 인덱스 키 변경
 * 값에 따라 저장될 리프 노드의 위치가 결정됨
 * B-Tree 의 키값이 변경되는 경우에는 단순히 인덱스상의 키값만 변경하는 것은 불가능
+* B-Tree의 키값 변경 작업
+	* 먼저 키 값 삭제
+	* 다시 새로운 키 값 추가
+### 인덱스 키 변경
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0Mzk3OTg0ODIsMTg0ODUyMzgxLDgxNT
-Y4MDM4NCwtNDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0
-MzcsMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMT
-I5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbMTMzMjc0NzYyLDE4NDg1MjM4MSw4MTU2OD
+AzODQsLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3
+LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
+Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
