RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -1,4 +1,5 @@
 
+
 # 5. 인덱스
 ## 5.1 디스크 읽기 방식
 ### 5.1.1 저장 매체
@@ -165,11 +166,349 @@
 * B-Tree의 키값 변경 작업
 	* 먼저 키 값 삭제
 	* 다시 새로운 키 값 추가
-### 인덱스 키 변경
-* 
+#### 인덱스 키 검색
+* B-Tree를 이용한 검색
+	* 100% 일치하는 경우
+	* 앞부분(left-most part) 만 일치하는 경우
+	* **부등호("<>") 비교나 값의 뒷부분 비교는 B-Tree 인덱스를 이용한 검색이 불가능**
+
+> << 주의 >>
+> * 이미 변형된 값은 B-Tree 인덱스에 존재하는 값이 아님
+> * **즉, *함수나 연산을 수행한 결과*로 정렬/검색하는 작업은 B-Tree의 장점 이용 불가능**
+* InnoDB의 경우
+	* 레코드 잠금, 넥스트 키 락(갭 락) 이 검색을 수행한 **인덱스를 잠근 후 테이블의 레코드를 잠그는 식**으로 동작
+	* 즉, UPDATE 나 DELETE 수행 시 적절한 인덱스가 없으면 불필요하게 많은 레코드를 잠그게 됨
+### 5.3.3 B-Tree 인덱스 사용에 영향을 미치는 요소
+* 인덱스를 구성하는 컬럼의 크기
+* 레코드의 건수
+* 유니크안 인덱스 키 값의 개수
+#### 인덱스 키 값의 크기
+* InnoDB 에서 디스크에 데이터를 쓰는 가장 기본 단위 : **페이지 (Page) 또는 블록 (Block)**
+	* 디스크의 모든 읽기 및 쓰기 작업의 최소 작업 단위가 됨
+	* 인덱스도 페이지 단위로 관리됨
+		* 루트, 브렌치, 리프 노드를 구분한 기준이 페이지
+* B-Tree 의 자식 노드 개수는 가변적. *페이지 크기*와 *키 값 크기*에 따라 자식 노드 수가 결정됨
+	* ex) 인덱스의 크기 = 16byte, 자식 노드 주소 영역 = 12byte, 인덱스 페이지 하나 크기 (16kb)
+		* 16*1024(16+12) = 585 개의 자식노드를 가질 수 있음
+	* ex) 인덱스의 크기 = 32 byte, 자식 노드 주소 영역 = 12byte, 인덱스 페이지 하나 크기 (16kb)
+		* 16*1024(32+12) = 372 개의 자식노드를 가질 수 있음
+	* 결론
+		* 인덱스를 구성하는 키 값의 크기가 커지면 디스크로부터 읽어야 하는 횟수가 늘어남 = 그만큼 느려짐
+		* 인덱스 키 값의 길이가 길어짐 = 전체적인 인덱스 크기가 커짐 = 인덱스를 캐시해 두는 innoDB의 버퍼풀이나 MyISAM 의 키 캐시 영역에 보관할 수 있는 레코드 개수가 줄어듦 = 메모리 효율이 떨어짐
+#### B-Tree 깊이
+* 직접적으로 제어할 방법 없음
+* B-Tree 깊이는 MySQL 에서 값을 검색할 때 **몇 번이나 랜덤하게 디스크를 읽어야 하는지와 직결되는 문제**
+* ex) B-Tree의 깊이가 3인 경우
+	* 키값이 16byte 인 경우 2억(585 * 585 * 585) 개 정도의 키값을 담을 수 있음
+	* 키값이 32byte 인 경우 5천만 (372 * 372 * 372) 개  정도의 키 값을 담을 수 있음
+	* 결론 : 인덱스의 키 값이 커질 수록 디스크 읽기가 더 많이 필요하게 됨
+#### 선택도 (기수성)
+* **모든 인덱스 키값 가운데 유니크한 값의 수**
+	* ex) 전체 인덱스 키값 : 100개, 유니크한 값 : 10개 => 기수성 : 10
+* 중복값이 많아지면 기수성은 낮아지고 동시에 선택도도 떨어짐
+* **선택도가 높을수록 검색 대상이 줄어들기 때문에 속도가 빨라짐**
+> (( 참고 ))
+> 선택도가 좋지 않더라도 정렬이나 그룹핑을 위해 인덱스를 만드는 것이 나은 경우도 있음
+* ex) 1만개의 레코드. county 만 인덱스
+	* case A : country 컬럼의 유니크 값이 10개
+		* 평균 1000건을 읽음 (10 * 1000 = 10000)
+		* 만족하는 레코드가 1개라면 1개를 위해 999개를 더 읽은 격
+	* case B : country 컬럼의 유니크 값이 1000개
+		* 편균 10건을 읽음 (1000 * 10 = 10000)
+		* 만족하는 레코드가 1개라면 1개를 위해 9개를 더 읽은 격
+#### 읽어야 하는 레코드의 건수
+* 인덱스를 통해서 테이블의 레코드를 읽는 비용 > 바로 테이블의 레코드를 읽는 비용
+	* 대략 4~5배 정도의 비용이 더 듦
+* 인덱스를 통해 읽어야 할 레코드의 건수가 전체 테이블 레코드의 **20~25%**를 넘어서면 인덱스를 이용하지 않고 직접 테이블을 모두 읽어서 필요한 레코드만 가려내는 방식(필터링)이 더 효율적
+### 5.3.4 B-Tree 인덱스를 통한 데이터 읽기
+#### 인덱스 레인지 스캔
+* **검색해야 할 인덱스의 범위가 결정되었을 때 사용하는 방식**
+* 만약 스캔하다가 리프 노드의 끝까지 다 읽으면 *리프 노드 간의 링크*를 이용해 다음 리프 노드를 찾아서 다시 스캔함
+* 스캔 마지막 위치에 다다르면 사용자에게 레코드 반환
+* 실제 레코드를 가져올 때는 **레코드 한건 단위로 랜덤 I/O 가 한번씩 실행**됨
+	* 그래서 인덱스를 통해 레코드를 읽는 것이 비용이 큰 작업이라는 것
+#### 인덱스 풀 스캔
+* **인덱스의 처음부터 끝까지 모두 읽는 방식**
+* 대표적으로, 쿼리의 조건절에 사용된 컬럼이 ***인덱스의 첫 컬럼이 아닌 경우*** 발생
+	* ex) 인덱스는 A, B, C 컬럼 순으로 만들어져 있지만 쿼리의 조건절은 B나 C 컬럼으로 검색하는 경우
+* 일반적으로 인덱스가 테이블보다 크기가 작아서 인덱스를 다 읽는게 테이블을 다 읽는 것보다 효율적임
+* **쿼리가 인덱스에 명시된 컬럼 만으로 조건을 처리할 수 있는 경우** 주로 사용됨
+* 인덱스 뿐만 아니라 레코드까지 모두 읽어야 한다면 이 방식으로 처리하지 않음
+* 효율성
+	* 인덱스 레인지 스캔 > 인덱스 풀 스캔 > 테이블 풀 스캔
+* 인덱스를 효율적으로 사용하는 방법은 아님
+#### 루스 인덱스 스캔
+* **느슨하게 인덱스를 검색하는 방법**
+	* Oracle의 인덱스 스킵 스캔과 비슷
+* 동작
+	* 인덱스 레인지 스캔과 비슷
+	* 차이점 : 중간마다 필요치 않은 인덱스 키값은 무시하고 다음으로 넘어가는 형태로 처리됨
+* 사용
+	* GroupBy, Max(), Min() 에 대해 최적화를 하는 경우 사용됨
+	* ex) 
+		* `SELECT dept_no, MIN(emp_no) FROM dept_emp WHERE dept_no BETWEEN 'd002' AND 'd004' GROUP BY dept_no;`
+		* group by 때문에 dept_no 그룹별로 제일 첫번째 코드만 읽으면 된다는 것을 옵티마이저가 알고 있음
+### 5.3.5 다중 컬럼 (Multi-coloum) 인덱스
+* 2개 이상 컬럼으로 구성된 인덱스
+* 정렬
+	* 인덱스의 두번째 칼럼은 첫번째 컬럼에 의존해서 정렬됨
+	* **즉, 두번째 컬럼은 첫번째 컬림이 똑같은 레코드에서만 의미가 있음**
+	* 4개가 묶여 있으면, 첫번째 <-(의존)- 두번째 <-(의존)- 세번째 <-(의존)- 네번째 이렇게 의존함
+### 5.3.6 B-Tree 인덱스의 정렬 및 스캔 방향
+#### 인덱스의 정렬
+* MySQL 은 컬럼 단위로 정렬 방식(ASC / DESC)을 혼합해서 생성하는 기능을 지원하지 않음
+	* 해당 쿼리를 실행하면 문제가 발생하진 않지만, 실제로는 ASC 로만 정렬되게 됨
+* 오름차순, 내림차순을 혼합하려면 칼럼의 값을 역으로 변환해서 구현하는 것이 유일한 방법
+	* ex) ranking 테이블에서 team_name 칼럼은 오름차순, user_score는 높은 점수 순서대로 정렬하고 싶음
+		* 테이블
+		`CREATE TABLE ranking (
+			team_name varchar(20),
+			user_name varchar(20),
+			user_score int,
+			...
+			index ix_teamname_userscore(team_name, user_score)
+		);`
+		* 쿼리
+		`SELECT team_name, user_name
+		FROM ranking
+		ORDER BY team_name ASC, user_score DESC;`
+			* 위 쿼리를 사용하면 원하는 결과를 조회는 가능
+			* 그러나, 최종 단계에서 레코드를 정렬하는 과정이 필요함 -> 빠른 처리 불가능
+			* 해결방법 : user_score 값을 역으로 변환해서 저장 = 즉, 마이너스(-) 부호를 붙여서 저장
+				`SELECT team_name, user_name
+		FROM ranking
+		ORDER BY team_name ASC, user_score ASC;`
+#### 인덱스 스캔 방향
+* 아래와 같은 경우 동작 방식
+	`SELECT * FROM employees ORDER BY first_name DESC LIMIT 1;`
+	* **이때 인덱스를 끝까지 읽지 않고, 옵티마이저에 의해 맨 끝으로 역순으로 접근해 1개를 읽어옴**
+* 인덱스를 역순으로 정렬은 불가능하지만, 읽는 방향에 따라 오름차순/내림차순 정렬 효과를 얻을 수 있음
+* *MIN(), MAX() 함수 등의 최적화*가 필요한 경우 옵티마이저는 인덱스의 읽기 방향을 전환해서 사용하도록 실행 계획을 만듦
+### 5.3.7 B-Tree 인덱스의 가용성과 효율성
+#### 비교 조건의 종류와 효율성
+* 다중 칼럼 인덱스
+	* 각 칼럼의 순서와 그 칼럼에 사용된 조건이 동등 조건 (=) 인지 범위 조건 (<, >) 인지에 따라 인덱스 칼럼 활용 형태 및 효율성이 달라짐
+`SELECT * FROM dept_emp WHERE dept_no = 'd002' AND emp_no >= 10114;`
+	* case A : dept_no + emp_no
+		* 원하는 결과를 단번에 가져온다
+		* **작업 범위 결정 조건**
+			* 이 경우 dept_no 컬럼과 emp_no 컬럼 모두 해당
+	* case B : emp_no + dept_no
+		* emp_no 가 먼저 정렬되어 있으므로 쓸데없는 정보도 같이 가져오게 된다
+		* **필터링 조건 (or 체크 조건)**
+			* 이 경우 emp_no 만 작업 범위 결정 조건이고 , dept_no 는 필터링 조건임
+	* 작업 범위 결정 조건은 많을수록 빨라짐
+	* 필터링 조건은 많다고 해서 쿼리 성능을 높이진 못함
+#### 인덱스의 가용성
+* B-Tree 인덱스 특징
+	* **왼쪽 값을 기준(left-most)으로 오른쪽 값이 정렬되어 있음**
+	* 왼쪽 중심은 다중 컬럼 인덱스의 칼럼에 대해서도 함께 적용됨
+* ex) `SELECT * FROM employees WHERE first_name LIKE '%mer';`
+	* 레인지 스캔 방식 사용 불가능
+	* 왼쪽부터 한글자씩 비교해 가면서 일치하는 레코드를 찾는 방식이기 떄문
+* ex2) `SELECT * FROM dept_emp WHERE emp_no >= 10144;`
+	* 인덱스가 dept_no, emp_no 칼럼 순으로 생성되어 있으면 인덱스의 선행 컬럼인 dept_no 값 없이 emp_no 값으로만 검색하면 인덱스를 효율적으로 사용 불가능
+	* GROUP BY 나 ORDER BY 에서도 똑같음
+#### 가용성과 효율성 판단
+* 작업 범위 결정 조건으로 사용할 수 없는 경우 (경우에 따라서는 체크 조건으로 인덱스 사용 가능)
+	* **NOT-EQUAL 로 비교된 경우** ("<>", "NOT IN", "NOT BETWEEN", "IS NOT NULL")
+	* **LIKE '%??'** (앞부분이 아닌 뒷부분 일치) 형태로 문자열 패턴이 비교된 경우
+	* stored 함수나 다른 연산자로 **인덱스 컬럼이 변형된 후 비교된 경우**
+		* WHERE SUBSTRING(column, 1, 1) = 'X'
+		* WHERE DAYOFMONTH(column) = 1
+	* **NON-DETERMINISTIC** 속성의 stored 함수가 비교 조건에 사용된 경우
+		* WHERE column = deterministic_function()
+	* 문자열 데이터 타입의 **콜레이션이 다른 경우**
+		* WHERE utf8_bin_char_column = euckr_bin_char_column
+* MySQL 에서는 NULL도 인덱스로 관리됨
+	* ex) `..WHERE column IS NULL ...` 도 작업 범위 결정 조건으로 인덱스 사용
+* 다중 컬럼 인덱스의 경우
+	* `INDEX ix_test(column_1, column_2, ..., column_n)`
+		* 작업범위 결정 조건으로 인덱스를 사용하지 못하는 경우
+			* column_1 컬럼에 대한 조건이 없는 경우
+			* column_1 컬럼의 비교 조건이 위의 인덱스 사용 불가 조건 중 하나인 경우
+		* 작업 범위 결정 조건으로 사용하는 경우 (i > 2 and i < n)
+			* column_1 ~ column_(i-1) 까지 Equal 형태 ('=' or 'IN')로 비교
+			* column_i 컬럼에 대해 다음 연산자중 하나로 비교
+				* Equal ('=' or 'IN')
+				* '>' 나 '<'
+				* LIKE 으로 좌측 일치 패턴 (like 'OO%')
+		* 위 두 조건을 모두 만족하는 경우
+			* column_1 ~ column_i 까지는 범위 결정 조건
+			* column_i ~ column_n 까지는 체크 조건
+## 5.4 해시 (Hash) 인덱스
+* 장점 : **동등 검색 비교**에 최적화 되어 있음
+* 사용
+	* 메모리 기반의 테이블에 주로 구현되어 있음
+		* 디스크 기반에서는 거의 사용되지 않음
+	* InnoDB의 버퍼풀에서 빠른 레코드 검색을 위한 Adaptive Hash Index 로 사용되기도 함
+	* 오라클에서는 join 에 사용됨
+### 5.4.1 구조 및 특성
+* 장점
+	* 실제 키 값과는 관계없이 인덱스 크기가 작고 검색이 빠름 (트리 구조가 아님)
+		* 찾고자 하는 키값이 포함된 버킷을 해싱으로 바로 찾음
+		* 버킷 = B-Tree의 노드
+	* 해싱 결과가 key 값으로 들어가기 때문에 인덱스 크기가 작다
+> (( 참고 ))
+> * 검색을 위한 해시 알고리즘
+> 	* 해시 함수의 결과가 넓어서 충돌이 적어야 함 = 검색 성능 높아짐
+> * 테이블의 파티셔닝 용도
+> 	* 해시가 필요한 파티션의 개수만큼 만들어내야 함
+>	* = 해시 함수의 결과 범위를 좀게 사용
+>	* ex) MySQL의 해시 파티션이 사용하는 방법
+### 5.4.2 해시 인덱스의 가용성 및 효율성
+* 해시 인덱스 단점
+	* 키값 자체가 변환되므로 **범위 검색이나 원본 값 기준으로 정렬이 불가능**
+#### 작업 범위 제한 조건으로 해시 인덱스를 사용하는 쿼리
+* 동등 조건으로 검색하는 쿼리들
+`SELECT ... FROM tb_hash WHERE column = '검색어';`
+`SELECT ... FROM tb_hash WHERE column <=> '검색어';`
+`SELECT ... FROM tb_hash WHERE column IN ('검색어1', '검색어2');`
+`SELECT ... FROM tb_hash WHERE column IS NULL;`
+`SELECT ... FROM tb_hash WHERE column IS NOT NULL;`
+	* <=> 기호는 NULL-Safe Equal
+		* 비교 양쪽의 값이 NULL이 있을 때를 제외하고는 '=' 연산자와 똑같음
+#### 해시 인덱스를 전혀 사용하지 못하는 쿼리
+* 작업 범위 검색 뿐만 아니라 체크 조건 용도로도 못 씀
+* *다중 컬럼*으로 생성된 해시 인덱스에서도 *모든 컬럼이 동등 조건으로 비교되는 경우에만 인덱스 사용 가능*
+## 5.5 R-Tree 인덱스
+* 공간 인덱스 (Spatial Index)
+	* R-Tree 인덱스를 이용해 2차원의 데이터를 인덱싱하고 검색하는 목적의 인덱스
+* B-Tree와 유사
+* R-Tree의 인덱스는 2차원의 공간 개념값
+* MySQL 공간 확장 기능
+	* 공간 데이터를 저장할 수 있는 데이터 타입
+	* 공간 데이터의 검색을 위한 공간 인덱스 (R-Tree 알고리즘)
+	* 공간 데이터의 연산 함수 (거리 또는 포함 관계의 처리)
+### 5.5.1 구조 및 특성
+* MySQL 의 기하학적 도형 데이터 타입
+	* point
+	* line
+	* polygon
+	* geometry
+		* point, line, polygon 모두 저장 가능
+* MBR (Minimum Bounding Rectangle)
+	* 해당 도형을 감싸는 최소 크기의 사각형
+* **MBR 들의 포함관계를 B-Tree로 구현한 인덱스 = R-Tree**
+* 최상위 MRB = Root Node 에 저장됨
+* 차상위 MRB = 브렌치 노드에 저장됨
+* 각 도형의 객체 = 리프 노드에 저장됨
+### 5.5.2 R-Tree 인덱스의 용도
+* 일반적으로 GPS 기준의 위도/경도 좌표 저장에 주로 사용됨
+* 좌표 시스템에 기반을 둔 정보들 저장 (ex - CAD/CAM 또는 회로 디자인 등)
+* **contains() 나 intersect() 같이 포함관계를 비교하는 함수로 검색을 수행하는 경우에만 인덱스 이용 가능**
+## 5.6 Fractal-Tree 인덱스
+### 5.6.1 Fractal-Tree의 특성
+* B-Tree 문제점
+	* 인덱스의 키를 변경하거나 검색하는 과정에서 랜덤 i/o 가 많이 발생하는 것
+* Fractal-Tree
+	* 랜덤이 아니라 순차 i/o로 변환해서 처리할 수 있도록 하는 것
+	* 인덱스보다 더 많은 정렬 작업 필요
+	* 인덱스의 단편화가 발생하지 않음
+	* 인덱스 키값을 클러스터링함
+		* B-Tree 보다 대용량 테이블에서 높은 성능을 보장
+	* 급격한 성능저하 현상이 없음
+* 에이징 (aging)
+	* 오랜 시간동안 데이터가 변경되면서 단편화 발생으로 인해 인덱스의 효율이 떨어지는 현상
+	* 그래서 따로 최적화 작업이 진행됨
+	* Fractal 에서는 단편화가 발생하지 않으므로 최적화 작업 필요 없음
+### 5.6.2 Fractal-Tree의 가용성과 효율성
+* B-Tree의 장점을 그대로 가지고 있음
+## 5.7 전문 검색 (Full Text Search) 인덱스
+* 전문 검색 : **문서의 내용 전체를 인덱스화해서 특정 키워드가 포함된 문서를 검색하는 것**
+	* B-Tree 같은 경우에는 실제 칼럼의 값을 모두 인덱스 키로 사용하는 것이 아니라 1000byte (MyISAM) 또는 767byte (InnoDB) 까지만 잘라서 사용함
+	* 따라서 전문 검색에는 적합한 인덱싱 방법이 아님
+* 전문 검색 인덱스 종류 (문서의 키워드를 인덱싱 하는 방법에 따라 분류함)
+	* 구분자 (Stopword)
+	* N-그램
+### 5.7.1 인덱스 알고리즘
+* 키워드로 인덱스 구축
+#### 구분자 (Stopword) 기법
+* 정의 : **구분자를 이용해 키워드를 분석**하고 결과 단어를 인덱스로 생성해서 저장하고 검색에 이용하는 법
+* 구분자 예시
+	* 문장 기호
+		* 공백
+		* 탭 (띄워쓰기)
+		* 마침표
+	* 사용자가 정의한 문자열
+* MySQL 의 내장 전문 검색 (FullText search) 엔진은 구분자 방식으로만 인덱싱 가능
+* 내부적으로는 B-Tree 사용
+	* 검색어나 본문 내용으로 정렬되어 조회되지 않음
+	* 일치율 (Match Percent) 이 높은 순으로 출력됨
+#### N-그램 (n-Gram) 기법
+* 구분자 기법 단점
+	* 각 국의 언어는 띄어쓰기가 없거나 문장 기호가 전혀 다른 경우가 많음
+		* 다양한 언어에서 하나의 규칙을 적용해 키워드 추출하기 힘듦
+	* 추출한 키워드의 뒷부분만으로 검색하는 건 불가능
+* N-Gram
+	* **본문의 무조건적으로 몇 글자씩 잘라서 인덱싱하는 방법**
+	* 구분자보다 인덱싱 알고리즘이 복잡
+	* 만들어진 인덱스도 상당히 큼
+	* n = 인덱싱할 키워드의 최소 글자 (또는 바이트) 수
+		* 일반적으로 2글자 단위 (2-Gram)
+* 2-Gram
+	* 인덱스 구성
+		* 프론트엔드 인덱스
+			* 최소 키워드에 대한 키 관리
+		* 백엔드 인덱스
+			* 2글자 이상의 키워드 묶음 (n-subsequence window)를 관리
+	* 인덱스 생성 과정
+		1. 본문을 2글자보다 큰 크기로 블록을 구분해서 백엔드 인덱스(3)를 생성
+		2. 백엔드 인덱스의 키워드들을 2글자씩 잘라서 프론트엔드 인덱스(6) 생성
+		3. 백엔드 인덱스와 프론트엔드 인덱스는 정규화 과정을 거쳐 B-Tree 알고리즘으로 인덱싱 됨
+	* 인덱스 검색 방법 (순차적으로 진행)
+		1. 입력된 검색어를 2바이트 단위로 동일하게 자름
+		2. 프론트 엔드 인덱스 검색
+		3. 2번 결과를 대상 후보군으로 선정
+		4. 백엔드 인덱스를 통해 최종 검증
+		5. 일치하는 결과 찾음
+### 5.7.2 구분자와 N-그램의 차이
+* 가장 큰 차이 : 검색 결과
+* 인덱스 크기 : N-Gram > 구분자
+* 인덱스 추가/삭제하는데 걸리는 시간 : N-Gram > 구분자
+* 전문 검색 수행하는데 걸리는 시간 : N-Gram < 구분자
+	* N-Gram의 트리톤이 구분자보다 2~3배 이상 빠름
+	* 클라이언트의 동시 실행 쿼리 수가 많아질수록 차이가 더 벌어짐
+* 검색어의 길이가 길어질수록 많은 성능 저하 발생
+### 5.7.3 전문 검색 인덱스의 가용성
+* 쿼리에 MATCH(...) 나 AGAINST(...) 구문으로 검색 쿼리를 작성해야 함
+	* MATCH 절의 괄호에 포함되는 내용은 반드시 사용할 전문 검색 인덱스에 정의된 칼럼이 모두 명시되어야 함
+## 5.8 비트맵 인덱스와 함수 기반 인덱스
+* MySQL 에서 비트맵/함수 기반 인덱스를 지원하지 않음
+* 우회해서 구현 가능
+* ex) 길이가 긴 칼럼에 대한 동등 비교
+	* 문자열의 해시값을 별도의 칼럼에 저장하고 해당 컬럼에 인덱스 생성하는 방식으로 사용
+## 5.9 클러스터링 인덱스
+* 비슷한 것들을 묶어서 저장
+	* 비슷한 값들을 동시에 조회하는 경우가 많으므로
+* InnoDB 에서 지원 (나머지 스토리지에서는 지원하지 않음)
+### 5.9.1 클러스터링 인덱스
+* 테이블의 **pk**에 대해서만 적용되는 내용
+	* *pk 값이 비슷한 레코드끼리 묶어서 저장하는 것 = 클러스터링 인덱스*
+	* 중요)) **pk 에 의해 레코드의 저장 위치가 결정됨**
+		* = pk 값이 변경되면 물리적인 저장 위치도 변경되어야 함
+* B-Tree와의 차이점
+	* **클러스터링 인덱스는 인덱스의 리프 노드에 레코드의 모든 컬럼이 같이 저장되어 있음**
+	* 즉, 클러스터링 테이블은 그 자체가 하나의 거대한 인덱스 구조로 관리됨
+* PK가 없는 InnoDB 테이블의 경우
+	* 다음의 우선순위대로 PK 를 대체할 칼럼을 선택함
+		1. PK 가 있으면 PK를 클러스터 키로 선택
+		2. Not Null 옵션의 unique index 중 첫번째 인덱스를 클러스터 키로 선택
+		3. 자동으로 유니크한 값을 가지도록 증가되는 컬럼을 내부적으로 추가 후 클러스터 키로 선택
+			* 자동 추가된 컬럼은 사용자들에게 노출되지 않음
+			* 쿼리 문장에 명시적으로 사용 불가능
+			* 즉, 아무런 의미 없는 값으로 클러스터링 되고 있음 = 별 도움 안됨
+### 5.9.2 보조 인덱스 (Secondary Index) 에 미치는 영향
+* PK가 SI 에 미치는 영향
+	* MyISAM 이나 Memory db의 경우 pk나 si나 차이 없음
+	* InnoDB는 보조키가 레코드 주소를 가지고 있는 경우를 방어하고자 **보조키는 항상 레코드가 아니라 PK를 저장하도록 구현**되어 있음
+* ex) `SELECT * FROM employees WHERE first_name = 'Aamer';`
+	* MyISAM
+		* idx_first_name 인덱스 검색해서 레코드 주소 확인
+		* 레코드 주소를 이용해 최종 레코드 가져옴
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMzMjc0NzYyLDE4NDg1MjM4MSw4MTU2OD
-AzODQsLTQyNzY2MjQwOSwtMTU2MzUwNzE3LC0xOTc0MDI5NDM3
-LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
-Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbMTk4MDQ3NDc3MCwxMzMyNzQ3NjIsMTg0OD
+UyMzgxLDgxNTY4MDM4NCwtNDI3NjYyNDA5LC0xNTYzNTA3MTcs
+LTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNT
+UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
