RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -506,9 +506,12 @@
 	* MyISAM
 		* idx_first_name 인덱스 검색해서 레코드 주소 확인
 		* 레코드 주소를 이용해 최종 레코드 가져옴
+	* InnoDB
+		* idx_first_name 인덱스를 검색해서 레코드의
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk4MDQ3NDc3MCwxMzMyNzQ3NjIsMTg0OD
-UyMzgxLDgxNTY4MDM4NCwtNDI3NjYyNDA5LC0xNTYzNTA3MTcs
-LTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNT
-UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTkyNDkwOTk2NiwxOTgwNDc0NzcwLDEzMz
+I3NDc2MiwxODQ4NTIzODEsODE1NjgwMzg0LC00Mjc2NjI0MDks
+LTE1NjM1MDcxNywtMTk3NDAyOTQzNywxODgzMDE4MDgyLDExOD
+cxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2
+MTEzXX0=
 -->
