RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -507,11 +507,14 @@
 		* idx_first_name 인덱스 검색해서 레코드 주소 확인
 		* 레코드 주소를 이용해 최종 레코드 가져옴
 	* InnoDB
-		* idx_first_name 인덱스를 검색해서 레코드의
+		* idx_first_name 인덱스를 검색해서 레코드의 pk 확인
+		* pk를 이용해서 다시 한번 테이블을 검색한 후 최종 레코드 가져옴
+		* InnoDB 가 MyISAM 보다 처리하는 과정이 많지만, pk로 레코드를 읽어오는 과정이 매우 빨라서 성능 걱정 필요 없음
+### 5.9.3 클러스터 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkyNDkwOTk2NiwxOTgwNDc0NzcwLDEzMz
-I3NDc2MiwxODQ4NTIzODEsODE1NjgwMzg0LC00Mjc2NjI0MDks
-LTE1NjM1MDcxNywtMTk3NDAyOTQzNywxODgzMDE4MDgyLDExOD
-cxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2
-MTEzXX0=
+eyJoaXN0b3J5IjpbLTEzNzAxOTAzNDAsMTk4MDQ3NDc3MCwxMz
+MyNzQ3NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwtNDI3NjYyNDA5
+LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMT
+g3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2
+NjExM119
 -->
