--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -510,9 +510,13 @@
 		* idx_first_name 인덱스를 검색해서 레코드의 pk 확인
 		* pk를 이용해서 다시 한번 테이블을 검색한 후 최종 레코드 가져옴
 		* InnoDB 가 MyISAM 보다 처리하는 과정이 많지만, pk로 레코드를 읽어오는 과정이 매우 빨라서 성능 걱정 필요 없음
-### 5.9.3 클러스터 
+### 5.9.3 클러스터 인덱스의 장점과 단점
+* 장점
+	* pk를 사용한 검색이 빠름
+		* 특히 pk를 이용한 범위 검색의 경우
+	* 테이블의 모든 보조 인덱스가 pk를 가지고 있음 = 인덱스 만으로 처리되는 경우가 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNzAxOTAzNDAsMTk4MDQ3NDc3MCwxMz
+eyJoaXN0b3J5IjpbLTE0MTc3NTg0NTQsMTk4MDQ3NDc3MCwxMz
 MyNzQ3NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwtNDI3NjYyNDA5
 LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMT
 g3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2
