RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -517,13 +517,13 @@
 * 테이블의 모든 보조 인덱스가 pk를 가지고 있음 = *인덱스 만으로 처리되는 경우가 많음* (커버링 인덱스)
 #### 단점
 * 테이블의 모든 보조 인덱스가 클러스터 키(주로 pk)를 가지고 있음 = 클러스터 키값 크기가 클 수록 *전체적인 인덱스 크기가 커짐*
-* 
 * 보조 인덱스를 통해 검색할 때 pk로 다시 한번 검색해야 하므로 **처리 성능이 조금 느림**
-* 
+* INSERT 할 때 pk에 의해 레코드의 저장 위치가 결정됨 = 처리 성능이 느림
+* pk를 변경할 때 레코드를 DELETE 하고 INSERT 하는 과정이 필요 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU1NjEwNzk4MSwxOTgwNDc0NzcwLDEzMz
-I3NDc2MiwxODQ4NTIzODEsODE1NjgwMzg0LC00Mjc2NjI0MDks
-LTE1NjM1MDcxNywtMTk3NDAyOTQzNywxODgzMDE4MDgyLDExOD
-cxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2
-MTEzXX0=
+eyJoaXN0b3J5IjpbMjUyNjU3MjIzLDE5ODA0NzQ3NzAsMTMzMj
+c0NzYyLDE4NDg1MjM4MSw4MTU2ODAzODQsLTQyNzY2MjQwOSwt
+MTU2MzUwNzE3LC0xOTc0MDI5NDM3LDE4ODMwMTgwODIsMTE4Nz
+E2Njk5NywxMjU1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYx
+MTNdfQ==
 -->
