--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -519,11 +519,14 @@
 * 테이블의 모든 보조 인덱스가 클러스터 키(주로 pk)를 가지고 있음 = 클러스터 키값 크기가 클 수록 *전체적인 인덱스 크기가 커짐*
 * 보조 인덱스를 통해 검색할 때 pk로 다시 한번 검색해야 하므로 **처리 성능이 조금 느림**
 * INSERT 할 때 pk에 의해 레코드의 저장 위치가 결정됨 = 처리 성능이 느림
-* pk를 변경할 때 레코드를 DELETE 하고 INSERT 하는 과정이 필요 
+* pk를 변경할 때 레코드를 DELETE 하고 INSERT 하는 과정이 필요 = 처리 성능이 느림
+### 5.9.4 클러스터 테이블 사용 시 주의사항
+#### 클러스터 인덱스 키의 크기
+* 클러스터 테이블의 경우 보조 인덱스가 pk(클러스터 키) 값을 포함하므로 pk 가 너무 커
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjUyNjU3MjIzLDE5ODA0NzQ3NzAsMTMzMj
-c0NzYyLDE4NDg1MjM4MSw4MTU2ODAzODQsLTQyNzY2MjQwOSwt
-MTU2MzUwNzE3LC0xOTc0MDI5NDM3LDE4ODMwMTgwODIsMTE4Nz
-E2Njk5NywxMjU1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYx
-MTNdfQ==
+eyJoaXN0b3J5IjpbMTg5MzMxMDEzMywyNTI2NTcyMjMsMTk4MD
+Q3NDc3MCwxMzMyNzQ3NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwt
+NDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4Mz
+AxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2
+NSwtMTA1OTU2NjExM119
 -->
