--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -522,9 +522,13 @@
 * pk를 변경할 때 레코드를 DELETE 하고 INSERT 하는 과정이 필요 = 처리 성능이 느림
 ### 5.9.4 클러스터 테이블 사용 시 주의사항
 #### 클러스터 인덱스 키의 크기
-* 클러스터 테이블의 경우 보조 인덱스가 pk(클러스터 키) 값을 포함하므로 pk 가 너무 커
+* 클러스터 테이블의 경우 보조 인덱스가 pk(클러스터 키) 값을 포함하므로 pk 크기를 신중이 고려해 선택해야 함
+	* ex) pk 크기가 10byte와 50byte 이고, 보조키가 5개인 경우
+		* 10byte
+			* 레코드 하나당 증가하는 인덱스 크기 : 10byte * 5 = 50 byte = 50 byte
+		* 50
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg5MzMxMDEzMywyNTI2NTcyMjMsMTk4MD
+eyJoaXN0b3J5IjpbLTE3NjQ2NTAyNSwyNTI2NTcyMjMsMTk4MD
 Q3NDc3MCwxMzMyNzQ3NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwt
 NDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4Mz
 AxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2
