RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -525,10 +525,14 @@
 * 클러스터 테이블의 경우 보조 인덱스가 pk(클러스터 키) 값을 포함하므로 pk 크기를 신중이 고려해 선택해야 함
 	* ex) pk 크기가 10byte와 50byte 이고, 보조키가 5개인 경우
 		* 10byte
-			* 레코드 하나당 증가하는 인덱스 크기 : 10byte * 5 = 50 byte = 50 byte
-		* 50
+			* 레코드 하나당 증가하는 인덱스 크기 : 10byte * 5 = 50 byte
+			* 100만건의 레코드를 저장했을 때 증가하는 인덱스 크기 : 50byte * 1,000,000 = 47mb
+		* 50byte
+			* 레코드 하나당 증가하는 인덱스 크기 : 50byte * 5 = 250 byte
+			* 100만건의 레코드를 저장했을 때 증가하는 인덱스 크기 : 250byte * 1,000,000 = 238mb
+#### pk는 auto-increment 보다는 가능한 경우 업무적인 커
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NjQ2NTAyNSwyNTI2NTcyMjMsMTk4MD
+eyJoaXN0b3J5IjpbMTgwMjQyMDk1OCwyNTI2NTcyMjMsMTk4MD
 Q3NDc3MCwxMzMyNzQ3NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwt
 NDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4Mz
 AxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2
