RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -530,9 +530,10 @@
 		* 50byte
 			* 레코드 하나당 증가하는 인덱스 크기 : 50byte * 5 = 250 byte
 			* 100만건의 레코드를 저장했을 때 증가하는 인덱스 크기 : 250byte * 1,000,000 = 238mb
-#### pk는 auto-increment 보다는 가능한 경우 업무적인 커
+#### pk는 auto-increment 보다는 *가능한 경우* 업무적인 컬럼으로 생성할 것
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgwMjQyMDk1OCwyNTI2NTcyMjMsMTk4MD
+eyJoaXN0b3J5IjpbLTU4MDU0NzY0NSwyNTI2NTcyMjMsMTk4MD
 Q3NDc3MCwxMzMyNzQ3NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwt
 NDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4Mz
 AxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2
