RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -531,11 +531,13 @@
 			* 레코드 하나당 증가하는 인덱스 크기 : 50byte * 5 = 250 byte
 			* 100만건의 레코드를 저장했을 때 증가하는 인덱스 크기 : 250byte * 1,000,000 = 238mb
 #### pk는 auto-increment 보다는 *가능한 경우* 업무적인 컬럼으로 생성할 것
+* 칼럼의 크기가 크더라도 업무적으로 해당 레코드를 대표할 수 있다면 그 칼럼을 pk로 설정하는 게 좋음
+#### pk는 반드시 명시할 것
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU4MDU0NzY0NSwyNTI2NTcyMjMsMTk4MD
-Q3NDc3MCwxMzMyNzQ3NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwt
-NDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5NzQwMjk0MzcsMTg4Mz
-AxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2
-NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTExNDc4MjY5NzgsLTU4MDU0NzY0NSwyNT
+I2NTcyMjMsMTk4MDQ3NDc3MCwxMzMyNzQ3NjIsMTg0ODUyMzgx
+LDgxNTY4MDM4NCwtNDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5Nz
+QwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1
+NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
