--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -533,11 +533,13 @@
 #### pk는 auto-increment 보다는 *가능한 경우* 업무적인 컬럼으로 생성할 것
 * 칼럼의 크기가 크더라도 업무적으로 해당 레코드를 대표할 수 있다면 그 칼럼을 pk로 설정하는 게 좋음
 #### pk는 반드시 명시할 것
-* 
+* InnoDB 에서 pk를 지정하지 않으면 auto_increment 와 같은 컬럼을 내부적으로 추가함
+* 그러나 이렇게 추가한 칼럼은 사용자에게 보이지 않기 때문에 sql에서 활용할 수가 없음
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNDc4MjY5NzgsLTU4MDU0NzY0NSwyNT
-I2NTcyMjMsMTk4MDQ3NDc3MCwxMzMyNzQ3NjIsMTg0ODUyMzgx
-LDgxNTY4MDM4NCwtNDI3NjYyNDA5LC0xNTYzNTA3MTcsLTE5Nz
-QwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1
-NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTE4ODk4NTgwODYsLTExNDc4MjY5NzgsLT
+U4MDU0NzY0NSwyNTI2NTcyMjMsMTk4MDQ3NDc3MCwxMzMyNzQ3
+NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwtNDI3NjYyNDA5LC0xNT
+YzNTA3MTcsLTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2
+OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM1
+19
 -->
