RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -535,8 +535,12 @@
 #### pk는 반드시 명시할 것
 * InnoDB 에서 pk를 지정하지 않으면 auto_increment 와 같은 컬럼을 내부적으로 추가함
 * 그러나 이렇게 추가한 칼럼은 사용자에게 보이지 않기 때문에 sql에서 활용할 수가 없음
+#### auto-increment 칼럼을 인조 식별자로 사용할 경우
+* 복합 pk가 만들어지는 경우 pk의 크기가 길어짐
+	* 이런 경우라도 보조 인덱스가 필요치 않다면 그대로 사용하는 것이 좋음
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4ODk4NTgwODYsLTExNDc4MjY5NzgsLT
+eyJoaXN0b3J5IjpbLTE4ODMxODY4MjIsLTExNDc4MjY5NzgsLT
 U4MDU0NzY0NSwyNTI2NTcyMjMsMTk4MDQ3NDc3MCwxMzMyNzQ3
 NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwtNDI3NjYyNDA5LC0xNT
 YzNTA3MTcsLTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2
