RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -538,12 +538,15 @@
 #### auto-increment 칼럼을 인조 식별자로 사용할 경우
 * 복합 pk가 만들어지는 경우 pk의 크기가 길어짐
 	* 이런 경우라도 보조 인덱스가 필요치 않다면 그대로 사용하는 것이 좋음
-* 
+* auto-increment pk 컬럼을 보통 인조 식별자 (Surrogate key) 라고 함
+	* 로그 테이블 같이 **INSERT** 위주의 테이블은 auto_increment 를 이용한 인조 식별자를 pk로 설정하는 것이 성능 향상에 도움을 줌
+## 5.10 유니크 인덱스
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4ODMxODY4MjIsLTExNDc4MjY5NzgsLT
-U4MDU0NzY0NSwyNTI2NTcyMjMsMTk4MDQ3NDc3MCwxMzMyNzQ3
-NjIsMTg0ODUyMzgxLDgxNTY4MDM4NCwtNDI3NjYyNDA5LC0xNT
-YzNTA3MTcsLTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2
-OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM1
-19
+eyJoaXN0b3J5IjpbMTc1NTY5MDA4NywtMTE0NzgyNjk3OCwtNT
+gwNTQ3NjQ1LDI1MjY1NzIyMywxOTgwNDc0NzcwLDEzMzI3NDc2
+MiwxODQ4NTIzODEsODE1NjgwMzg0LC00Mjc2NjI0MDksLTE1Nj
+M1MDcxNywtMTk3NDAyOTQzNywxODgzMDE4MDgyLDExODcxNjY5
+OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2MTEzXX
+0=
 -->
