RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -541,9 +541,13 @@
 * auto-increment pk 컬럼을 보통 인조 식별자 (Surrogate key) 라고 함
 	* 로그 테이블 같이 **INSERT** 위주의 테이블은 auto_increment 를 이용한 인조 식별자를 pk로 설정하는 것이 성능 향상에 도움을 줌
 ## 5.10 유니크 인덱스
-
+* 인덱스라기 보다는 제약 조건에 가까움
+* MySQL 에서는 인덱스 없이 유니크 제약만 설정할 방법이 없음
+* null 도 저장 가능
+	* 특정 값이 아니므로 2개 이상 저장 가능
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc1NTY5MDA4NywtMTE0NzgyNjk3OCwtNT
+eyJoaXN0b3J5IjpbMTk3MTA2ODIzNCwtMTE0NzgyNjk3OCwtNT
 gwNTQ3NjQ1LDI1MjY1NzIyMywxOTgwNDc0NzcwLDEzMzI3NDc2
 MiwxODQ4NTIzODEsODE1NjgwMzg0LC00Mjc2NjI0MDksLTE1Nj
 M1MDcxNywtMTk3NDAyOTQzNywxODgzMDE4MDgyLDExODcxNjY5
