--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -545,9 +545,12 @@
 * MySQL 에서는 인덱스 없이 유니크 제약만 설정할 방법이 없음
 * null 도 저장 가능
 	* 특정 값이 아니므로 2개 이상 저장 가능
+	* 예외) pk는 unique, not null 속성을 모두 가지고 있음
+### 5.10.1 유니크 인덱스와 일반 보조 인덱스의 비교
+* **인덱스 구조상 차이점은 없음**
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk3MTA2ODIzNCwtMTE0NzgyNjk3OCwtNT
+eyJoaXN0b3J5IjpbMTkwODMwMTMxNSwtMTE0NzgyNjk3OCwtNT
 gwNTQ3NjQ1LDI1MjY1NzIyMywxOTgwNDc0NzcwLDEzMzI3NDc2
 MiwxODQ4NTIzODEsODE1NjgwMzg0LC00Mjc2NjI0MDksLTE1Nj
 M1MDcxNywtMTk3NDAyOTQzNywxODgzMDE4MDgyLDExODcxNjY5
