RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -548,12 +548,13 @@
 	* 예외) pk는 unique, not null 속성을 모두 가지고 있음
 ### 5.10.1 유니크 인덱스와 일반 보조 인덱스의 비교
 * **인덱스 구조상 차이점은 없음**
-* 
+* 인덱스 읽기
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkwODMwMTMxNSwtMTE0NzgyNjk3OCwtNT
-gwNTQ3NjQ1LDI1MjY1NzIyMywxOTgwNDc0NzcwLDEzMzI3NDc2
-MiwxODQ4NTIzODEsODE1NjgwMzg0LC00Mjc2NjI0MDksLTE1Nj
-M1MDcxNywtMTk3NDAyOTQzNywxODgzMDE4MDgyLDExODcxNjY5
-OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2MTEzXX
-0=
+eyJoaXN0b3J5IjpbNjAwNTg4ODkxLC0xMTQ3ODI2OTc4LC01OD
+A1NDc2NDUsMjUyNjU3MjIzLDE5ODA0NzQ3NzAsMTMzMjc0NzYy
+LDE4NDg1MjM4MSw4MTU2ODAzODQsLTQyNzY2MjQwOSwtMTU2Mz
+UwNzE3LC0xOTc0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2Njk5
+NywxMjU1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ
+==
 -->
