--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -552,9 +552,12 @@
 	* 성능
 		* 유니크 인덱스나 보조 인덱스나 비슷
 	* 이유
-		* 유니크 인덱스가 1건 읽을 때 보조 인덱스는 한번 더 읽어야 하므로 느리다고 하는데, 이는 사실이 아님. 
+		* 유니크 인덱스가 1건 읽을 때 보조 인덱스는 한번 더 읽어야 하므로 느리다고 하는데, 이는 사실이 아님
+			* 보조 인덱스에서 한번 더 해야하는 작업은 디스크 읽기가 아니라 cpu 에서 컬럼값을 비교하는 작업
+			* 즉, 성능차가 거의 없음
+		* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzYzNTczNDYzLC0xMTQ3ODI2OTc4LC01OD
+eyJoaXN0b3J5IjpbLTM2NTU0MDIyLC0xMTQ3ODI2OTc4LC01OD
 A1NDc2NDUsMjUyNjU3MjIzLDE5ODA0NzQ3NzAsMTMzMjc0NzYy
 LDE4NDg1MjM4MSw4MTU2ODAzODQsLTQyNzY2MjQwOSwtMTU2Mz
 UwNzE3LC0xOTc0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2Njk5
