--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -2,7 +2,7 @@
 ## 10.1 개요
 * 파티션이란?
 	* MySQL 서버의 입장에서 **데이터를 별도의 테이블로 분리해서 저장**하지만, 사용자 입장에서는 **여전히 하나의 테이블로 읽기와 쓰기를 할 수 있게 해주는** 솔루션
-	* 
+	* 하나의 서버에서 테이블으
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbMTg2NzQ4MzY5OCwxNTA5NzY3NTk4XX0=
 -->
