RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -1,8 +1,16 @@
 # 10. 파티션
-## 10.1 개요
 * 파티션이란?
 	* MySQL 서버의 입장에서 **데이터를 별도의 테이블로 분리해서 저장**하지만, 사용자 입장에서는 **여전히 하나의 테이블로 읽기와 쓰기를 할 수 있게 해주는** 솔루션
-	* 하나의 서버에서 테이블으
+	* 하나의 서버에서 테이블을 분산하는 것 (원격 서버 간 분산은 아님)
+	* 대부분의 스토리지 엔진에서 사용 가능
+	* 종류
+		* 해시
+		* 리스트
+		* 키
+		* 레인지
+	* 서브 파티셔닝도 가능
+## 10.1 개요
+* 파티션이 적용된 테이블에서 INSERT 나 SELECT 등과 같은 쿼리가 어떻게 실행되는지 알아보자
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg2NzQ4MzY5OCwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbMTE0MDAwMTI4MywxNTA5NzY3NTk4XX0=
 -->
