RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -10,7 +10,9 @@
 		* 레인지
 	* 서브 파티셔닝도 가능
 ## 10.1 개요
-* 파티션이 적용된 테이블에서 INSERT 나 SELECT 등과 같은 쿼리가 어떻게 실행되는지 알아보자
+* 파티션이 SQL 문장 수행에 어떤 영향을 미치는지, 파티션으로 기대할 수 있는 장점은 무엇인지
+### 10.1.1 파티션을 사용하는 이유
+* 하나의 테이블이 너무 커서 인데
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE0MDAwMTI4MywxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbLTEzMzIyNDc3MjEsMTUwOTc2NzU5OF19
 -->
