--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -12,7 +12,11 @@
 ## 10.1 개요
 * 파티션이 SQL 문장 수행에 어떤 영향을 미치는지, 파티션으로 기대할 수 있는 장점은 무엇인지
 ### 10.1.1 파티션을 사용하는 이유
-* 하나의 테이블이 너무 커서 인데
+* 대표적인 경우
+	* 하나의 테이블이 너무 커서 인덱스의 크기가 물리적인 메모리보다 훨씬 큰 경우
+	* 데이터 특성상 주기적인 삭제 작업이 필요한 경우
+#### 단일 INSERT 와 단일 또는 범위 SELECT 의 빠른 처리
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMzIyNDc3MjEsMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
