--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -16,7 +16,8 @@
 	* 하나의 테이블이 너무 커서 인덱스의 크기가 물리적인 메모리보다 훨씬 큰 경우
 	* 데이터 특성상 주기적인 삭제 작업이 필요한 경우
 #### 단일 INSERT 와 단일 또는 범위 SELECT 의 빠른 처리
-* 
+* 인덱스의 워킹 셋
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbNzYzNjcxNzMyLC0xMTEzMTI3NzksMTUwOT
+c2NzU5OF19
 -->
