RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -18,7 +18,10 @@
 #### 단일 INSERT 와 단일 또는 범위 SELECT 의 빠른 처리
 * 인덱스의 워킹 셋 (working set) 이 실질적인 물리 메모리보다 크다면 쿼리 처리가 상당히 느려짐
 	* 테이블 데이터는 실질적인 물리 메모리보다 큰 것이 일반적
+* 테이블을 파티셔닝하지 않고 그냥 사용할 때와 작은 파티션으로 나눠서 워킹 셋의 크기를 줄였을 때 인덱스의 워킹 셋이 물리적인 메모리를 어떻게 사용하는지
+	*![그림 10-1](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Photo_2021-05-24-23-11-36.jpeg)
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MzY3Njg5ODgsLTExMTMxMjc3OSwxNT
-A5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbLTIyNTA0NjE3NiwtMTgzNjc2ODk4OCwtMT
+ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
