RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -22,8 +22,11 @@
 	![그림 10-1](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Photo_2021-05-24-23-11-36.jpeg)
 	* 파티셔닝하지 않은 경우 : 인덱스도 커지고 그만큼 물리적인 메모리 공간도 많이 필요해짐
 * 파티션의 효과
-	* 데이터와 인덱스를 조각화해서 
+	* 데이터와 인덱스를 조각화해서 물리적 메모리를 효율적으로 사용할 수 있게 함
+> 참고
+> * 
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc0ODg1MzAxMywtMTgzNjc2ODk4OCwtMT
-ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbOTEyMDYxOTYsLTE4MzY3Njg5ODgsLTExMT
+MxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
