--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -27,9 +27,11 @@
 > * 테이블의 데이터가 10GB, 인덱스가 3GB라고 가정
 > 	* 대부분의 테이블은 13GB 전체를 항상 사용하는 게 아니라 특히 활발하게 사용하는 부분을 다시 사용함
 > * 활발하게 사용되는 데이터 = 워킹 셋
-> * 테이블의 데이터를 워킹 셋과 그렇지 않은 부류로 파티셔닝 할 수 있다면 상당히 효
+> * 테이블의 데이터를 워킹 셋과 그렇지 않은 부류로 파티셔닝 할 수 있다면 상당히 효과적으로 성능을 개선할 수 있음
+#### 데이터의 물리적인 저장소를 분리
+* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTcyNjk5MjczLC0xODM2NzY4OTg4LC0xMT
-EzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
