--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -29,9 +29,11 @@
 > * 활발하게 사용되는 데이터 = 워킹 셋
 > * 테이블의 데이터를 워킹 셋과 그렇지 않은 부류로 파티셔닝 할 수 있다면 상당히 효과적으로 성능을 개선할 수 있음
 #### 데이터의 물리적인 저장소를 분리
-* 
+* 데이터 파일이나 인덱스 파일이 파일 시스템에서 차지하는 공간이 크다 = 백업이나 관리 작업이 어려워짐
+* 테이블의 데이터나 인덱스를 파일 단위로 관리하는 MySQL에서는 더 치명적
+* 해결법 : 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
-ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbLTQ5MTczNDQ5MSwtMTM1NzU3ODIwNCwtMT
+gzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
