RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -31,9 +31,15 @@
 #### 데이터의 물리적인 저장소를 분리
 * 데이터 파일이나 인덱스 파일이 파일 시스템에서 차지하는 공간이 크다 = 백업이나 관리 작업이 어려워짐
 * 테이블의 데이터나 인덱스를 파일 단위로 관리하는 MySQL에서는 더 치명적
-* 테이블의 파티션 단위로 인덱스를 순차적으로 생성하는 방법은 아직
+* 테이블의 파티션 단위로 인덱스를 순차적으로 생성하는 방법은 아직 허용되지 않음
+#### 이력 데이터의 효율적인 관리
+* 이력 데이터 = 로그
+* 특징
+	* 단기간에 대량으로 누적
+	* 일정 기간이 지나면 쓸모가 없어짐
+* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5NjgyMDkyNywtMTM1NzU3ODIwNCwtMT
+eyJoaXN0b3J5IjpbMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMT
 gzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
