RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -37,9 +37,10 @@
 * 특징
 	* 단기간에 대량으로 누적
 	* 일정 기간이 지나면 쓸모가 없어짐
-* 
+* 로그 테이블을 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMT
-gzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbLTE5NjIxNTgxNTcsMTkyNzAxMTU3NSwtMT
+M1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3
+Njc1OThdfQ==
 -->
