RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -39,9 +39,14 @@
 	* 일정 기간이 지나면 쓸모가 없어짐
 * 로그 테이블을 파티션을 사용해 기간 단위로 쪼개서 삭제하면 서버 부하와 테이블 동시성 문제를 해결할 수 있다
 ### 10.1.2 MySQL 파티션의 내부 처리
-* 
+
+    CREATE TABLE tb_article (
+     article_id INT NOT NULL,
+     reg_date DATETIME NOT NULL,
+     
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUxMjc0MzU3MCwxOTI3MDExNTc1LC0xMz
-U3NTc4MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2
-NzU5OF19
+eyJoaXN0b3J5IjpbLTEyNzY4MzE4MDgsMTkyNzAxMTU3NSwtMT
+M1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3
+Njc1OThdfQ==
 -->
