RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -43,10 +43,15 @@
     CREATE TABLE tb_article (
      article_id INT NOT NULL,
      reg_date DATETIME NOT NULL,
-     
+     PRIMARY KEY (article_id)
+    )
+    PARTITION BY RANGE ( YEAR(reg_date) ) (
+     PARTITION p2009 VALUES LESS THAN (2010),
+     PARTITION 
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNzY4MzE4MDgsMTkyNzAxMTU3NSwtMT
+eyJoaXN0b3J5IjpbLTEzNzAyMDAzNjYsMTkyNzAxMTU3NSwtMT
 M1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3
 Njc1OThdfQ==
 -->
