RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -47,11 +47,14 @@
     )
     PARTITION BY RANGE ( YEAR(reg_date) ) (
      PARTITION p2009 VALUES LESS THAN (2010),
-     PARTITION 
+     PARTITION p2010 VALUES LESS THAN (2011),
+     PARTITION p2011 VALUES LESS THAN (2012),
+     PARTITION p9999 VALUES LESS THAN MAXVALUE
+    );
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNzAyMDAzNjYsMTkyNzAxMTU3NSwtMT
+eyJoaXN0b3J5IjpbLTEwNzQxODY1NTcsMTkyNzAxMTU3NSwtMT
 M1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3
 Njc1OThdfQ==
 -->
