RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -42,6 +42,7 @@
 
     CREATE TABLE tb_article (
      article_id INT NOT NULL,
+     col1 VARCHAR(45) NULL,
      reg_date DATETIME NOT NULL,
      PRIMARY KEY (article_id)
     )
@@ -54,7 +55,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNzQxODY1NTcsMTkyNzAxMTU3NSwtMT
+eyJoaXN0b3J5IjpbLTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMT
 M1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3
 Njc1OThdfQ==
 -->
