RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -53,9 +53,10 @@
      PARTITION p9999 VALUES LESS THAN MAXVALUE
     );
 
+![또잉?!](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2010.53.14.png)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMT
-M1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3
-Njc1OThdfQ==
+eyJoaXN0b3J5IjpbNDE5NTg5MywtMTAyNjQxOTk3OCwxOTI3MD
+ExNTc1LC0xMzU3NTc4MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3
+NzksMTUwOTc2NzU5OF19
 -->
