RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -55,9 +55,13 @@
 
 ![또잉?!](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2010.53.14.png)
 * 원인
-* 
+	* 문서 : [링크](https://dev.mysql.com/doc/refman/5.7/en/partitioning-limitations-partitioning-keys-unique-keys.html)
+	* 내용
+		* In other words, _every unique key on the table must use every column in the table's partitioning expression_. (This also includes the table's primary key, since it is by definition a unique key. This particular case is discussed later in this section.)
+	* 즉, reg_date 이 pk 에 포함되어 있지 않아서임
+* 아래와 같이 create dd
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQwMjAzMTk1MSw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTM0MjI5NTgzNyw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
