RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -60,12 +60,12 @@
 		* In other words, _every unique key on the table must use every column in the table's partitioning expression_. (This also includes the table's primary key, since it is by definition a unique key. This particular case is discussed later in this section.)
 	* 즉, reg_date 이 pk 에 포함되어 있지 않아서임
 * 아래와 같이 create ddl 을 변경해 봄
-
-    CREATE TABLE tb_article (
+```
+	CREATE TABLE tb_article (
      article_id INT NOT NULL,
      col1 VARCHAR(45) NULL,
      reg_date DATETIME NOT NULL,
-     PRIMARY KEY (article_id)
+     PRIMARY KEY (article_id, reg_date)
     )
     PARTITION BY RANGE ( YEAR(reg_date) ) (
      PARTITION p2009 VALUES LESS THAN (2010),
@@ -73,9 +73,11 @@
      PARTITION p2011 VALUES LESS THAN (2012),
      PARTITION p9999 VALUES LESS THAN MAXVALUE
     );
+```
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDI2MzQzMTI2LDQxOTU4OTMsLTEwMjY0MT
-k5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4
-OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbLTgxNDE0NzUwNSw0MTk1ODkzLC0xMDI2ND
+E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
+ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
