RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -74,10 +74,10 @@
      PARTITION p9999 VALUES LESS THAN MAXVALUE
     );
 ```
-
-
+![성공](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.08.13.png)
+* 그렇다면 uniqe
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgxNDE0NzUwNSw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTQ3NjIyNjY0NCw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
